fix document overflowing

--- a/source/sass/modularity-recommend.scss
+++ b/source/sass/modularity-recommend.scss
@@ -8,3 +8,7 @@
     margin-left: 0;
   }
 }
+
+.modularity-mod-recommend {
+  overflow: hidden;
+}
